# PMD_extraction_and_analysis

./: .gitattributes  README.MD  pyproject.toml
PMD_extraction_and_analysis/analysis/: create_pmd_dataset.py
PMD_extraction_and_analysis/analysis/machine_learning/: augment.py  config.py  main.py  metrics.py  models.py  utils.py
PMD_extraction_and_analysis/analysis/statistical_analysis/: statistical_analysis.py
PMD_extraction_and_analysis/extraction/: extract_PMDs.ps1
PMD_extraction_and_analysis/extraction/perfusion_tool/: DSC_main.m  DSC_mri_core.m
PMD_extraction_and_analysis/extraction/perfusion_tool/utils/: DSC_mri_SVD.m  DSC_mri_aif.m  DSC_mri_cSVD.m  DSC_mri_cbf.m  DSC_mri_cbv.m  DSC_mri_conc.m  DSC_mri_getOptions.asv  DSC_mri_getOptions.m  DSC_mri_mask.m  DSC_mri_mask_og.m  DSC_mri_mask_only_aif.m  DSC_mri_mtt.m  DSC_mri_patient_motion.m  DSC_mri_show_results.m  DSC_mri_stable_spline_v5.m  DSC_mri_tmax.m  DSC_mri_ttp.m  creaC_z.m  minloglikDNP.m  subtract2.py
PMD_extraction_and_analysis/extraction/perfusion_tool/utils_aif/: GVfunction.m  GVfunction_picco1.m  GVfunction_picco2.m  GVfunction_ricircolo.m  calcolaReg.m  clusterGerarchico.m  displayVerboseResults.m  fitGV_picco1.m  fitGV_picco2.m  objFitGV_picco1.m  objFitGV_picco2.m
PMD_extraction_and_analysis/extraction/utils/: generate_pmds.py  get_first_timepoint.py  normalize.py  register_atlas_to_perf.py  register_to_perf.py  reorient.py
dummy_dataset/atlas/: HO_labels.xlsx
